Checkear que los mazos de construido tienen al menos 60 cartas

--- a/mtg_console/mtg_console/TODO
+++ b/mtg_console/mtg_console/TODO
@@ -20,3 +20,9 @@ Current task:
         - Restricciones de mazo según el formato
 Pending tasks:
     -
+Notas:
+    - Al implementar una nueva regla:
+        - Comprobar casos en los que no se cumple
+        - Devolver Status
+        - Manejar el status en la interfaz
+        - Crear tests
