Comprobación de la restricción de no más de cuatro copias de una carta en el mazo

--- a/mtg_console/mtg_console/TODO
+++ b/mtg_console/mtg_console/TODO
@@ -19,7 +19,7 @@ Current task:
         - Todos los jugadores deben tener un mazo
         - Restricciones de mazo según el formato
 Pending tasks:
-    -
+    - Gestionar con Status que no se creen partidas de un solo jugador
 Notas:
     - Al implementar una nueva regla:
         - Comprobar casos en los que no se cumple
